@@ -1,3 +1,7 @@
+Fri May 22 14:38:43 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb: PoolQueue#push_all: 追加. Import#push_buf: push_all対応
+
 Wed May 20 16:08:11 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* processor.rb: 通信先が死んだときログを残すようにした.
